Navbar: Make correct section display on mobile
Although the navbar was made sticky on mobile with the previous commit, it always stated 'Home' at the top. This was fixed to show the appropriate section depending on where the user had scrolled to on the page.

--- a/styles.css
+++ b/styles.css
@@ -295,13 +295,15 @@ a:link, a:visited {
 /* Media Queries */
 
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
+  .topnav a:not(.active) {display: none;}
+
   .topnav a.navmenu {
     float: right;
     display: block;
   }
 
   .topnav.expand {position: relative;}
+
   .topnav.expand a.navmenu {
     position: absolute;
     right: 0;
